# infinitinote

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  tailwind.config.js  webpack.config.js
.well-known/: ic-domains
src/infinitinote_backend/: Cargo.toml  infinitinote_backend.did
src/infinitinote_backend/src/: lib.rs
src/infinitinote_frontend/: Cargo.toml  Trunk.toml  index.bak.html  index.html
src/infinitinote_frontend/assets/: bridge.bundle.js  bridge.bundle.js.map  bridge.js  frontend.bundle.js  manifest.json  sw.js
src/infinitinote_frontend/assets/.well-known/: ic-domains
src/infinitinote_frontend/assets/sass/: style.scss.old
src/infinitinote_frontend/src/: App.vue  app.rs  bridge.js  ic_call.rs  index.html  index.js  index.old.html  main.rs
src/infinitinote_frontend/src/components/: ChatBot.vue  Note.vue  NoteCard.vue  NoteTag.vue  Notebook.vue  NotebookAdd.vue  NotebookAddCard.vue  NotebookCard.vue  NotebooksHome.vue  Signup.vue  TopBar.vue
src/infinitinote_frontend/src/router/: index.js
src/infinitinote_frontend/src/styles/: global.css
