[package]
name = "infinitinote_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
ic-cdk = "0.7.3"
ic-cdk-macros = "0.6.0"
serde = "1.0"
web-sys = { version = "0.3.60", features = ["Crypto"] }
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
sha256 = "1.1.1"
egui = "0.21.0"
derive_more = "0.99.17"
compiler_builtins = "0.1.93"
