[package]
name = "infinitinote_frontend"
version = "0.1.0"
authors = ["Hafez Rouzati hafez@hafez.me"]
edition = "2021"
rust-version = "1.65"


[dependencies]
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }

# You only need serde if you want app persistence:
serde = { version = "=1.0.183", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
js-sys = "0.3.61"
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
